[package]
name = "volcengine-rs"
version = "0.1.2"
edition = "2021"
description = "Volcengine API SDK"
categories = ["authentication", "network-programming"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AllenDang/volcengine-rs"
repository = "https://github.com/AllenDang/volcengine-rs"
keywords = ["volcengine", "sdk"]
exclude = ["/.github", ".gitignore"]
rust-version = "1.83.0"

[[bin]]
name = "volc"
path = "src/main.rs"

[dependencies]
chrono = "0.4.39"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
base64 = "0.22.1"
serde_urlencoded = "0.7.0"
